--- a/src/assets/less/box.less
+++ b/src/assets/less/box.less
@@ -1,6 +1,9 @@
 .mt10{
   .margin-top(10rem);
 }
+.mt20{
+  .margin-top(20rem);
+}
 .pl10{
   .padding-left(10rem);
 }
@@ -12,4 +15,13 @@
 }
 .border-bottom-20{
   .border-bottom(20rem);
+}
+.border-bottom{
+  .border-bottom(2rem);
+}
+.full-width{
+  width: 100%;
+}
+.full-height{
+  height: 100%;
 }
